# Ricardo

./: Cargo.toml  README_BR.txt
environment/: Cargo.toml
environment/src/: lib.rs
exercises/one/: Cargo.toml
exercises/one/src/: main.rs
exercises/one/src/assets/: mod.rs
exercises/one/src/assets/example/: frag.glsl  vert.glsl
exercises/support/: Cargo.toml
exercises/support/src/support/: matrix.rs  mesh.rs  mod.rs
exercises/three/: Cargo.toml
exercises/three/a/: Cargo.toml
exercises/three/a/src/: main.rs
exercises/three/a/src/assets/visitor/: frag.glsl
exercises/three/b/: Cargo.toml
exercises/three/b/src/: main.rs
exercises/three/b/src/assets/: mod.rs
exercises/three/b/src/assets/visitor/: vert.glsl
exercises/two/a/: Cargo.toml
exercises/two/a/src/: main.rs
exercises/two/a/src/assets/: mod.rs
exercises/two/b/: Cargo.toml
exercises/two/b/src/: main.rs
exercises/two/b/src/assets/visitor/: vert.glsl
exercises/two/c/: Cargo.toml
exercises/two/c/src/: main.rs
exercises/two/c/src/assets/visitor/: frag.glsl
exercises/two/d/: Cargo.toml
exercises/two/d/src/: main.rs
exercises/two/e/: Cargo.toml
exercises/two/e/src/: main.rs
exercises/two/e/src/assets/: mod.rs
exercises/two/e/src/assets/visitor/: frag.glsl  vert.glsl
gavle/: Cargo.toml
gavle/example/: Cargo.toml
gavle/example/quad/: main.rs
gavle/src/: access.rs  binding.rs  buffer.rs  framebuffer.rs  info.rs  lib.rs  pass.rs  pipeline.rs  shader.rs  texture.rs
projects/one/: Cargo.toml
projects/one/src/: entity.rs  main.rs  render.rs  scene.rs
projects/one/src/shaders/: mod.rs
projects/one/src/shaders/lighting/: VertexColoredDirect.glsl
projects/one/src/shaders/shapes/: Backwall.glsl  Mountains.glsl  Snowfall.glsl  Waterfall.glsl
support/: Cargo.toml
support/src/: lib.rs
support/src/support/: camera.rs  matrix.rs  mod.rs  vertex.rs
