[package]
name = "environment"
version = "0.1.0"
authors = ["Matheus Branco Borella <dark.ryu.550@gmail.com>"]
edition = "2018"
description = """
This library is responsible for creating a window and a Gavle device in hosted
systems with Glutin and with a canvas in a browser.
"""

[dependencies]
log      = "0.4"
gavle    = { path = "../gavle" }
glow     = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { git = "https://github.com/rust-windowing/glutin/", rev = "080ffa5c1d0271bb9842a4c1f71b5ca2b47e22dc" }
env_logger = "0.8"
winit = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.version = "0.3"
web-sys.features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "HtmlCanvasElement",
]

wasm-bindgen = "0.2"
console_log = { version = "0.2", features = ["color"] }
winit = { version = "0.25", features = ["web-sys"] }
console_error_panic_hook = "0.1"
