[package]
name = "exercise-one"
version = "0.1.0"
authors = ["Matheus Branco Borella <dark.ryu.550@gmail.com>"]
edition = "2018"

[dependencies]
environment = { path = "../../environment" }
gavle       = { path = "../../gavle" }
winit       = "0.25"
bytemuck    = { version = "1", features = ["derive"] }